--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.4",
-    "@astrojs/rss": "^4.0.12",
-    "@astrojs/sitemap": "^3.5.1",
+    "@splidejs/splide": "^4.1.4",
     "@tailwindcss/vite": "^4.1.13",
     "@types/leaflet": "^1.9.20",
     "astro": "^5.13.5",
     "leaflet": "^1.9.4",
-    "sharp": "^0.34.2",
     "tailwindcss": "^4.1.13"
   }
 }
